--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 # Add runtime dependencies here if any are known upfront
 dependencies = [
     "universal_mcp>=0.1.11",
+    "google-search-results>=2.4.2"
 ]
 
 [project.optional-dependencies]
