--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,17 @@ build-backend = "hatchling.build"
 
 [project]
 name = "universal-mcp-serpapi"
-version = "0.1.3"
+version = "0.1.4"
 description = "A Universal MCP Application: universal_mcp_serpapi"
 readme = "README.md"
 requires-python = ">=3.11"
 classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
 dependencies = [
- "universal-mcp==0.1.24rc2",
+ "universal-mcp==0.1.23",
  "google-search-results>=2.4.2",
  "langgraph>=0.6.1",
  "langchain-openai>=0.3.28",
+ "pytest>=8.3.5",
 ]
 [[project.authors]]
 name = "Manoj Bajaj"
